my-cluster-policies/kyverno.yml
# SRE-OWNED POLICY (You don't need to touch this)
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-loadbalancer-services
spec:
  validationFailureAction: Enforce
  rules:
  - name: validate-service-type
    match:
      any:
      - resources:
          kinds:
          - Service
    # We must exclude critical namespaces from this rule.
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - argocd
          - kyverno

    # Error Message.
    validate:
      message: "Exposing services via LoadBalancer is not allowed. Please use Ingress."
      pattern:
        spec:
          type: "!LoadBalancer"
